--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -2,13 +2,12 @@
   "name": "@nekeldev/react",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup src/index.tsx --format esm,cjs --dts --external react",
-    "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
+    "dev": "tsup src/index.tsx --format esm,cjs --dts --external react --watch",
     "lint": "eslint src/**/*.ts* --fix"
   },
   "keywords": [],
@@ -18,11 +17,11 @@
     "@nekeldev/eslint-config": "*",
     "@nekeldev/tokens": "*",
     "@nekeldev/ts-config": "*",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.9",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.3"
+    "tsup": "^6.2.3",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "@stitches/react": "^1.2.8"
