--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -2,11 +2,10 @@
   "name": "@nekeldev/tokens",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
     "lint": "eslint src/**/*.ts* --fix"
@@ -15,9 +14,9 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.3",
     "@nekeldev/ts-config": "*",
-    "@nekeldev/eslint-config": "*"
+    "@nekeldev/eslint-config": "*",
+    "tsup": "^6.2.3",
+    "typescript": "^4.8.4"
   }
 }
