:bug: fix typescript issue when writing tsx inside the docs package

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@nekeldev/eslint-config": "*",
+    "@nekeldev/ts-config": "*",
     "@nekeldev/react": "*",
     "@nekeldev/tokens": "*",
     "polished": "^4.2.2",
