--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "dev": "turbo run dev --parallel"
+  },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.2.0",
+    "turbo": "^1.6.3",
     "vite": "^3.2.4"
   }
 }
