--- a/turbo.json
+++ b/turbo.json
@@ -1,8 +1,12 @@
 {
- "$schema": "https://turborepo.org/schema.json",
- "pipeline": {
-  "dev": {
-   "cache": false
+  "$schema": "https://turborepo.org/schema.json",
+  "pipeline": {
+    "dev": {
+      "cache": false
+    },
+    "build": {
+      "outputs": ["dist/**", "storybook-static/**"],
+      "dependsOn": ["^build"]
+    }
   }
- }
 }
