--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -35,6 +35,8 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.8"
+    "@radix-ui/react-avatar": "^1.0.1",
+    "@stitches/react": "^1.2.8",
+    "phosphor-react": "^1.4.1"
   }
 }
