--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -26,9 +26,10 @@
   },
   "dependencies": {
     "@nekeldev/eslint-config": "*",
-    "@nekeldev/ts-config": "*",
     "@nekeldev/react": "*",
     "@nekeldev/tokens": "*",
+    "@nekeldev/ts-config": "*",
+    "@storybook/addon-a11y": "^6.5.13",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
