--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   ],
   "scripts": {
     "dev": "turbo run dev --parallel",
-    "build": "turbo run build"
+    "build": "turbo run build",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "release": "turbo run build --filter=packages/docs && changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.25.2",
     "@vitejs/plugin-react": "^2.2.0",
     "turbo": "^1.6.3",
     "vite": "^3.2.4"
