--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,6 +22,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env:
+          TURBO_TOKEN: Q0mNpQwpO2u2gAs29ls3xoFw
+          TURBO_TEAM: nekelpatrick
 
       - name: Deploy storybook
         working-directory: ./packages/docs
